# rate-limiter-1

./: .env_public  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: app.py  config.py  redis_client.py
src/api/: dependencies.py
src/api/routes/: code.py
src/services/: rate_limiter.py
tests/: test_dependencies.py  test_rate_limiter_service.py
